src/java/pycasm/parser/pycasmParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g 2011-05-08 12:08:39

package pycasm.parser;
import pycasm.sym.*;
import java.util.Arrays;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class pycasmParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DEDENT", "INDENT", "BLOCK", "ARGS", "GEN", "HEX_PAIR", "HEX_DQUAD", "HEX_EIGHT", "HEX_QUAD", "HEX_DIGIT", "HexDigit", "DOT_END", "Type", "TYPED_VALUE", "STRING", "Alpha", "DOT_NAME", "NAME", "NEWLINE", "WS", "COMMENT", "NON_WS_SEQUENCE", "HexAlpha", "Digit", "ROOT", "HEX", "SYM"
    };
    public static final int Alpha=19;
    public static final int Type=16;
    public static final int TYPED_VALUE=17;
    public static final int DOT_END=15;
    public static final int HexAlpha=26;
    public static final int HEX_DIGIT=13;
    public static final int DEDENT=4;
    public static final int Digit=27;
    public static final int HEX_DQUAD=10;
    public static final int EOF=-1;
    public static final int ROOT=28;
    public static final int HexDigit=14;
    public static final int SYM=30;
    public static final int INDENT=5;
    public static final int NAME=21;
    public static final int HEX_EIGHT=11;
    public static final int WS=23;
    public static final int NEWLINE=22;
    public static final int HEX=29;
    public static final int BLOCK=6;
    public static final int ARGS=7;
    public static final int NON_WS_SEQUENCE=25;
    public static final int GEN=8;
    public static final int DOT_NAME=20;
    public static final int COMMENT=24;
    public static final int HEX_QUAD=12;
    public static final int STRING=18;
    public static final int HEX_PAIR=9;

    // delegates
    // delegators


        public pycasmParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public pycasmParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[48+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return pycasmParser.tokenNames; }
    public String getGrammarFileName() { return "G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g"; }


    // Debug.
    boolean isDebug = true;
    // Overriden parser's methods for error decoration.
    public String getErrorMessage(RecognitionException e,
                                  String[] tokenNames) {
        String debugMsg = "\n";

        List stack = getRuleInvocationStack(e, this.getClass().getName());
        debugMsg = "\nrule stack:" + stack + debugMsg;
        
        debugMsg += "type:" + e.getClass().getName() +"\n";

        if ( e instanceof NoViableAltException ) {
    	NoViableAltException nvae = (NoViableAltException)e;
    	debugMsg += "token:"+e.token+
             " (decision="+nvae.decisionNumber+
             " state "+nvae.stateNumber+")"+
             " decision=<<"+nvae.grammarDecisionDescription+">>\n";
        }
        else if ( e instanceof EarlyExitException ) {
        	debugMsg += "previous token:" + input.LT(-1) + "\n" +
        	"hint: seems like some required token that must follow the previous accepted is missing\n";
        }

        String inputContext =
            input.LT(-3) == null ? "" : ((Tree)input.LT(-3)).getText()+" "+
            input.LT(-2) == null ? "" : ((Tree)input.LT(-2)).getText()+" "+
            input.LT(-1) == null ? "" : ((Tree)input.LT(-1)).getText()+" >>>"+
            ((Tree)input.LT(1)).getText()+"<<< "+
            ((Tree)input.LT(2)).getText()+" "+
            ((Tree)input.LT(3)).getText();

        debugMsg += "antlr message:" + super.getErrorMessage(e, tokenNames);
        debugMsg += "\ncontext:"+inputContext;

        String msg = "";
        if(isDebug)
        	msg = debugMsg;
        else
    		msg = "stumbled after '"+e.token.getText()+"', more details:\n"+debugMsg;
        return msg;
    }
    // Adds additional details to token string representation.
    public String getTokenErrorDisplay(Token t) {
        return t.toString()+"{"+tokenNames[t.getType()]+"}";
    }
    public String getErrorHeader(RecognitionException e) {
    	String h = super.getErrorHeader(e);
    	return "PARSER ERROR: " + h;
    }
    // Don't recover, report and exit.
    //@Override
    public void reportError(RecognitionException e) {
    	super.reportError(e);
    	throw new IllegalArgumentException();
    }
    // Throw error, don't recover.
    public void reportError(String message) {
    	throw new IllegalArgumentException(message);
    }
    // Rocovery methods.
    private String BitSetString(BitSet bs) {
    	String acc = "";
    	for(int i :  bs.toArray()) {
    		acc += " " + tokenNames[i];
    	}
    	return acc;
    }
    @Override
    protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException {
    	if(isDebug)
    		System.out.println("follow:"+BitSetString(follow));
    	throw new MismatchedTokenException(ttype, input);
    }
    @Override
    public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException {
    	if(isDebug)
    		System.out.println("follow:"+BitSetString(follow));
    	throw e;
    }


    public static class root_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "root"
    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:115:1: root : ( block | ( sp )+ )? EOF -> ^( ROOT ( block )? ) ;
    public final pycasmParser.root_return root() throws RecognitionException {
        pycasmParser.root_return retval = new pycasmParser.root_return();
        retval.start = input.LT(1);
        int root_StartIndex = input.index();
        Object root_0 = null;

        Token EOF3=null;
        pycasmParser.block_return block1 = null;

        pycasmParser.sp_return sp2 = null;


        Object EOF3_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_sp=new RewriteRuleSubtreeStream(adaptor,"rule sp");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:116:2: ( ( block | ( sp )+ )? EOF -> ^( ROOT ( block )? ) )
            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:117:3: ( block | ( sp )+ )? EOF
            {
            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:117:3: ( block | ( sp )+ )?
            int alt2=3;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==INDENT||(LA2_0>=HEX_PAIR && LA2_0<=HEX_QUAD)||(LA2_0>=TYPED_VALUE && LA2_0<=STRING)||(LA2_0>=DOT_NAME && LA2_0<=NAME)) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=NEWLINE && LA2_0<=WS)) ) {
                alt2=2;
            }
            switch (alt2) {
                case 1 :
                    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:117:4: block
                    {
                    pushFollow(FOLLOW_block_in_root73);
                    block1=block();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_block.add(block1.getTree());

                    }
                    break;
                case 2 :
                    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:117:11: ( sp )+
                    {
                    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:117:11: ( sp )+
                    int cnt1=0;
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( ((LA1_0>=NEWLINE && LA1_0<=WS)) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:0:0: sp
                    	    {
                    	    pushFollow(FOLLOW_sp_in_root76);
                    	    sp2=sp();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_sp.add(sp2.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt1 >= 1 ) break loop1;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(1, input);
                                throw eee;
                        }
                        cnt1++;
                    } while (true);


                    }
                    break;

            }

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_root81); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF3);



            // AST REWRITE
            // elements: block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 118:3: -> ^( ROOT ( block )? )
            {
                // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:118:6: ^( ROOT ( block )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ROOT, "ROOT"), root_1);

                // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:118:13: ( block )?
                if ( stream_block.hasNext() ) {
                    adaptor.addChild(root_1, stream_block.nextTree());

                }
                stream_block.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, root_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "root"

    public static class sp_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sp"
    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:121:1: sp : ( WS | NEWLINE )+ ->;
    public final pycasmParser.sp_return sp() throws RecognitionException {
        pycasmParser.sp_return retval = new pycasmParser.sp_return();
        retval.start = input.LT(1);
        int sp_StartIndex = input.index();
        Object root_0 = null;

        Token WS4=null;
        Token NEWLINE5=null;

        Object WS4_tree=null;
        Object NEWLINE5_tree=null;
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:121:4: ( ( WS | NEWLINE )+ ->)
            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:122:3: ( WS | NEWLINE )+
            {
            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:122:3: ( WS | NEWLINE )+
            int cnt3=0;
            loop3:
            do {
                int alt3=3;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==WS) ) {
                    int LA3_2 = input.LA(2);

                    if ( (synpred4_pycasmParser()) ) {
                        alt3=1;
                    }


                }
                else if ( (LA3_0==NEWLINE) ) {
                    int LA3_3 = input.LA(2);

                    if ( (synpred5_pycasmParser()) ) {
                        alt3=2;
                    }


                }


                switch (alt3) {
            	case 1 :
            	    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:122:4: WS
            	    {
            	    WS4=(Token)match(input,WS,FOLLOW_WS_in_sp105); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_WS.add(WS4);


            	    }
            	    break;
            	case 2 :
            	    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:122:7: NEWLINE
            	    {
            	    NEWLINE5=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_sp107); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_NEWLINE.add(NEWLINE5);


            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);



            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 122:17: ->
            {
                root_0 = null;
            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, sp_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "sp"

    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:125:1: block : ( element_chain -> ^( BLOCK element_chain ) | ( spaced_element )+ ( element_chain )? -> ^( BLOCK ( spaced_element )+ ( element_chain )? ) ) ( ( ( spaced_element )+ | ( sp )+ ) ( element_chain )? -> ^( $block ( spaced_element )+ ( element_chain )? ) )* ;
    public final pycasmParser.block_return block() throws RecognitionException {
        pycasmParser.block_return retval = new pycasmParser.block_return();
        retval.start = input.LT(1);
        int block_StartIndex = input.index();
        Object root_0 = null;

        pycasmParser.element_chain_return element_chain6 = null;

        pycasmParser.spaced_element_return spaced_element7 = null;

        pycasmParser.element_chain_return element_chain8 = null;

        pycasmParser.spaced_element_return spaced_element9 = null;

        pycasmParser.sp_return sp10 = null;

        pycasmParser.element_chain_return element_chain11 = null;


        RewriteRuleSubtreeStream stream_sp=new RewriteRuleSubtreeStream(adaptor,"rule sp");
        RewriteRuleSubtreeStream stream_element_chain=new RewriteRuleSubtreeStream(adaptor,"rule element_chain");
        RewriteRuleSubtreeStream stream_spaced_element=new RewriteRuleSubtreeStream(adaptor,"rule spaced_element");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:126:2: ( ( element_chain -> ^( BLOCK element_chain ) | ( spaced_element )+ ( element_chain )? -> ^( BLOCK ( spaced_element )+ ( element_chain )? ) ) ( ( ( spaced_element )+ | ( sp )+ ) ( element_chain )? -> ^( $block ( spaced_element )+ ( element_chain )? ) )* )
            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:127:3: ( element_chain -> ^( BLOCK element_chain ) | ( spaced_element )+ ( element_chain )? -> ^( BLOCK ( spaced_element )+ ( element_chain )? ) ) ( ( ( spaced_element )+ | ( sp )+ ) ( element_chain )? -> ^( $block ( spaced_element )+ ( element_chain )? ) )*
            {
            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:127:3: ( element_chain -> ^( BLOCK element_chain ) | ( spaced_element )+ ( element_chain )? -> ^( BLOCK ( spaced_element )+ ( element_chain )? ) )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=HEX_PAIR && LA6_0<=HEX_QUAD)||(LA6_0>=TYPED_VALUE && LA6_0<=STRING)||LA6_0==NAME) ) {
                alt6=1;
            }
            else if ( (LA6_0==DOT_NAME) && (( input.LT(1).getCharPositionInLine() == 0 || input.LT(-1).getType() == NEWLINE ))) {
                alt6=2;
            }
            else if ( (LA6_0==INDENT) ) {
                alt6=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:128:3: element_chain
                    {
                    pushFollow(FOLLOW_element_chain_in_block128);
                    element_chain6=element_chain();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_element_chain.add(element_chain6.getTree());


                    // AST REWRITE
                    // elements: element_chain
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 128:17: -> ^( BLOCK element_chain )
                    {
                        // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:128:20: ^( BLOCK element_chain )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCK, "BLOCK"), root_1);

                        adaptor.addChild(root_1, stream_element_chain.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:129:5: ( spaced_element )+ ( element_chain )?
                    {
                    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:129:5: ( spaced_element )+
                    int cnt4=0;
                    loop4:
                    do {
                        int alt4=2;
                        alt4 = dfa4.predict(input);
                        switch (alt4) {
                    	case 1 :
                    	    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:0:0: spaced_element
                    	    {
                    	    pushFollow(FOLLOW_spaced_element_in_block142);
                    	    spaced_element7=spaced_element();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_spaced_element.add(spaced_element7.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt4 >= 1 ) break loop4;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(4, input);
                                throw eee;
                        }
                        cnt4++;
                    } while (true);

                    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:129:21: ( element_chain )?
                    int alt5=2;
                    alt5 = dfa5.predict(input);
                    switch (alt5) {
                        case 1 :
                            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:0:0: element_chain
                            {
                            pushFollow(FOLLOW_element_chain_in_block145);
                            element_chain8=element_chain();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_element_chain.add(element_chain8.getTree());

                            }
                            break;

                    }



                    // AST REWRITE
                    // elements: element_chain, spaced_element
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 129:36: -> ^( BLOCK ( spaced_element )+ ( element_chain )? )
                    {
                        // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:129:39: ^( BLOCK ( spaced_element )+ ( element_chain )? )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCK, "BLOCK"), root_1);

                        if ( !(stream_spaced_element.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_spaced_element.hasNext() ) {
                            adaptor.addChild(root_1, stream_spaced_element.nextTree());

                        }
                        stream_spaced_element.reset();
                        // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:129:63: ( element_chain )?
                        if ( stream_element_chain.hasNext() ) {
                            adaptor.addChild(root_1, stream_element_chain.nextTree());

                        }
                        stream_element_chain.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;

            }

            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:131:3: ( ( ( spaced_element )+ | ( sp )+ ) ( element_chain )? -> ^( $block ( spaced_element )+ ( element_chain )? ) )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==NEWLINE) ) {
                    int LA11_2 = input.LA(2);

                    if ( (synpred13_pycasmParser()) ) {
                        alt11=1;
                    }


                }
                else if ( (LA11_0==DOT_NAME) && (( input.LT(1).getCharPositionInLine() == 0 || input.LT(-1).getType() == NEWLINE ))) {
                    int LA11_3 = input.LA(2);

                    if ( ((synpred13_pycasmParser()&&( input.LT(1).getCharPositionInLine() == 0 || input.LT(-1).getType() == NEWLINE ))) ) {
                        alt11=1;
                    }


                }
                else if ( (LA11_0==INDENT) ) {
                    int LA11_4 = input.LA(2);

                    if ( (synpred13_pycasmParser()) ) {
                        alt11=1;
                    }


                }
                else if ( (LA11_0==WS) ) {
                    int LA11_5 = input.LA(2);

                    if ( (synpred13_pycasmParser()) ) {
                        alt11=1;
                    }


                }


                switch (alt11) {
            	case 1 :
            	    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:131:4: ( ( spaced_element )+ | ( sp )+ ) ( element_chain )?
            	    {
            	    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:131:4: ( ( spaced_element )+ | ( sp )+ )
            	    int alt9=2;
            	    int LA9_0 = input.LA(1);

            	    if ( (LA9_0==DOT_NAME) && (( input.LT(1).getCharPositionInLine() == 0 || input.LT(-1).getType() == NEWLINE ))) {
            	        alt9=1;
            	    }
            	    else if ( (LA9_0==INDENT) ) {
            	        alt9=1;
            	    }
            	    else if ( ((LA9_0>=NEWLINE && LA9_0<=WS)) ) {
            	        alt9=2;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 9, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt9) {
            	        case 1 :
            	            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:131:5: ( spaced_element )+
            	            {
            	            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:131:5: ( spaced_element )+
            	            int cnt7=0;
            	            loop7:
            	            do {
            	                int alt7=2;
            	                int LA7_0 = input.LA(1);

            	                if ( (LA7_0==DOT_NAME) && (( input.LT(1).getCharPositionInLine() == 0 || input.LT(-1).getType() == NEWLINE ))) {
            	                    int LA7_2 = input.LA(2);

            	                    if ( ((synpred9_pycasmParser()&&( input.LT(1).getCharPositionInLine() == 0 || input.LT(-1).getType() == NEWLINE ))) ) {
            	                        alt7=1;
            	                    }


            	                }
            	                else if ( (LA7_0==INDENT) ) {
            	                    int LA7_3 = input.LA(2);

            	                    if ( (synpred9_pycasmParser()) ) {
            	                        alt7=1;
            	                    }


            	                }


            	                switch (alt7) {
            	            	case 1 :
            	            	    // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:0:0: spaced_element
            	            	    {
            	            	    pushFollow(FOLLOW_spaced_element_in_block168);
            	            	    spaced_element9=spaced_element();

            	            	    state._fsp--;
            	            	    if (state.failed) return retval;
            	            	    if ( state.backtracking==0 ) stream_spaced_element.add(spaced_element9.getTree());

            	            	    }
            	            	    break;

            	            	default :
            	            	    if ( cnt7 >= 1 ) break loop7;
            	            	    if (state.backtracking>0) {state.failed=true; return retval;}
            	                        EarlyExitException eee =
            	                            new EarlyExitException(7, input);
            	                        throw eee;
            	                }
            	                cnt7++;
            	            } while (true);


            	            }
            	            break;
            	        case 2 :
            	            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:131:21: ( sp )+
            	            {
            	            // G:\\Storage\\workspace\\unpyc\\pycasm_first_release\\\\src\\antlr3\\javaTarget\\pycasmParser.g:131:21: ( sp )+
            	            int cnt8=0;
            	            loop8:
            	            do {
            	                int alt8=2;
            	                int LA8_0 = input.LA(1);

            	                if ( (LA8_0==NEWLINE) ) {
